fixed package.json of the root

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,44 +1,33 @@
 {
-  // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
-    // File Layout
-    // "rootDir": "./src",
-    // "outDir": "./dist",
-
-    // Environment Settings
-    // See also https://aka.ms/tsconfig/module
+   
+    "rootDir": "./",          // Look for TS files in the current folder
+    "outDir": "./dist",       // Put compiled JS files here for Render to find
+    
+    
     "module": "nodenext",
     "target": "esnext",
-    "types": [],
-    // For nodejs:
-    // "lib": ["esnext"],
-    // "types": ["node"],
-    // and npm install -D @types/node
+    "moduleResolution": "nodenext",
+    "esModuleInterop": true,
+    
+    
+    "baseUrl": ".",
+    "paths": {
+      "@shared/*": ["../shared/*"]
+    },
 
-    // Other Outputs
+    
+    "lib": ["esnext"],
+    "types": ["node"],
+
+    
+    "strict": true,
+    "skipLibCheck": true,
     "sourceMap": true,
     "declaration": true,
-    "declarationMap": true,
-
-    // Stricter Typechecking Options
-    "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
-
-    // Style Options
-    // "noImplicitReturns": true,
-    // "noImplicitOverride": true,
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
-    // "noFallthroughCasesInSwitch": true,
-    // "noPropertyAccessFromIndexSignature": true,
-
-    // Recommended Options
-    "strict": true,
-    "jsx": "react-jsx",
-    "verbatimModuleSyntax": true,
-    "isolatedModules": true,
-    "noUncheckedSideEffectImports": true,
-    "moduleDetection": "force",
-    "skipLibCheck": true,
-  }
+    "verbatimModuleSyntax": false, 
+    "isolatedModules": true
+  },
+  "include": ["**/*.ts", "../shared/**/*.ts"], // Include shared folder in compilation
+  "exclude": ["node_modules", "dist"]
 }
