--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "dev:server": "cd server && npm run dev",
         "dev:client": "cd client && npm run dev",
         "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
-        "build": "cd client && npm run build",
+        "build": "cd client && npm run build && cd ../server && npm run build", 
         "start": "cd server && npm start"
     },
     "devDependencies": {
