--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon --exec \"node --loader ts-node/esm\" index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
